switch to java 8 because the current version of xtext doesn't support 11